docs(thesis): Refine chapters 3-5 with academic tone and detailed architectural explanations

--- a/FE900_Thesis/chapter3.tex
+++ b/FE900_Thesis/chapter3.tex
@@ -1,10 +1,10 @@
-\chapter{High-Level Architecture of an FPGA Matching Engine}
+\chapter{High-Level Architecture of the FPGA-Based Matching Engine}
 
-An FPGA-based matching engine is not a monolithic entity but rather a system of interconnected, highly-specialized modules working in harmony. Figure \ref{fig:matching_engine_arch} illustrates the high-level architecture, showing the data flow from network ingress to egress.
+The design of a high-frequency trading (HFT) system requires a rigorous adherence to the principles of determinism and minimal latency. Unlike general-purpose computing architectures, which optimize for average-case throughput, an FPGA-based matching engine must be architected for worst-case execution time. This chapter details the high-level architecture of the proposed system, decomposing it into a pipeline of highly specialized, heterogeneous modules. Figure \ref{fig:matching_engine_arch} illustrates the unidirectional data flow, tracing the lifecycle of a market event from network ingress to trade execution.
 
 \begin{figure}[h!]
     \centering
-    \caption{High-Level Data Flow in the Implemented FPGA Matching Engine}
+    \caption{Data Flow Architecture of the FPGA Matching Engine}
     \label{fig:matching_engine_arch}
     \begin{tikzpicture}[node distance = 1.0cm and 0.5cm, auto]
         % Define styles
@@ -17,7 +17,7 @@ An FPGA-based matching engine is not a monolithic entity but rather a system of 
         \node [block, below=of mac_rx] (parser) {RX Parser (L2/L3/L4)};
         \node [block, below=of parser] (decoder) {ITCH Decoder};
         \node [block, right=of decoder] (book) {Order Book (L1/BBO)};
-        \node [block, right=of book] (strategy) {RL Core};
+        \node [block, right=of book] (strategy) {RL Inference Core};
         \node [block, above=of strategy] (encoder) {OUCH Encoder};
         \node [block, above=of encoder] (bridge) {TX Bridge};
         \node [block, left=of bridge] (mac_tx) {MAC TX (AXI-S)};
@@ -27,44 +27,44 @@ An FPGA-based matching engine is not a monolithic entity but rather a system of 
         \path [line] (parser) -- node[midway, right, scale=0.7] {UDP Payload} (decoder);
         \path [line] (decoder) -- node[midway, below, scale=0.7] {Tick (Price/Qty)} (book);
         \path [line] (book) -- node[midway, below, scale=0.7] {BBO State} (strategy);
-        \path [line] (strategy) -- node[midway, right, scale=0.7] {Buy/Sell Signal} (encoder);
+        \path [line] (strategy) -- node[midway, right, scale=0.7] {Trade Signal} (encoder);
         \path [line] (encoder) -- node[midway, left, scale=0.7] {OUCH Packet} (bridge);
         \path [line] (bridge) -- (mac_tx);
     \end{tikzpicture}
 \end{figure}
 
-\section{Description of Key Modules}
+\section{Modular Design and Functional Decomposition}
 
-The system is composed of several core modules, each designed to perform a specific task with minimal latency.
+The system architecture is predicated on a pipelined design pattern, where each stage performs a discrete transformation on the data stream. This modularity allows for precise timing constraints to be applied to critical paths and facilitates the independent verification of sub-components.
 
+\subsection{Ingress and Protocol Parsing}
+The ingress stage is responsible for the line-rate consumption of Ethernet frames.
 \begin{description}
-    \item[RX Parser (\texttt{rx\_parser})]
-    \textit{Responsibility:} Inspects incoming Ethernet packets to extract the UDP payload containing market data. \\
-    \textit{Implementation:} A Finite State Machine (FSM) that tracks byte offsets to strip Ethernet (14 bytes), IP (20 bytes), and UDP (8 bytes) headers, streaming only the payload to the downstream decoder.
+    \item[RX Parser (\texttt{rx\_parser}):] This module serves as the gatekeeper of the system. Implemented as a Finite State Machine (FSM), it inspects incoming 64-bit words from the MAC interface. Its primary function is to strip the Ethernet (14 bytes), IPv4 (20 bytes), and UDP (8 bytes) headers. Crucially, it validates the checksums and destination ports in hardware, dropping irrelevant traffic immediately to prevent downstream congestion.
+    
+    \item[ITCH Decoder (\texttt{itch\_decoder}):] Following header removal, the raw payload is streamed to the protocol decoder. This module parses the NASDAQ ITCH 5.0 binary protocol. It employs a sliding-window buffer to align incoming byte streams and extract semantic fields—specifically Order ID, Price, and Quantity—from "Add Order" (Type 'A') and "Order Executed" (Type 'E') messages. The output is a normalized "Tick" structure, abstracting the specific wire protocol from the rest of the system.
+\end{description}
 
-    \item[ITCH Decoder (\texttt{itch\_decoder})]
-    \textit{Responsibility:} Parses the raw binary payload to identify specific market messages (e.g., "Add Order"). \\
-    \textit{Logic:} It accumulates streaming data into a buffer and extracts fixed-width fields (Timestamp, Price, Quantity) once a complete message is received, normalizing them into a unified "Tick" format.
+\subsection{State Management and Decision Logic}
+The core of the trading engine resides in its ability to maintain state and make decisions based on that state.
+\begin{description}
+    \item[Order Book Management (\texttt{book2}):] The normalized ticks feed into the hardware Order Book. Unlike software implementations that might store the full depth of the book (Level 2/3), this FPGA module is optimized to maintain the "Best Bid and Offer" (BBO) with single-cycle update latency. It compares incoming price levels against stored registers (\texttt{bid\_px0}, \texttt{ask\_px0}) and updates the top-of-book state instantaneously, providing the Strategy Engine with the most current market view.
 
-    \item[Order Book (\texttt{book2})]
-    \textit{Responsibility:} Maintains the "Best Bid and Offer" (BBO) state in hardware registers. \\
-    \textit{Implementation:} Optimized for single-cycle updates. It compares incoming ticks against the current BBO registers and updates them immediately if the new price is more competitive.
+    \item[Reinforcement Learning Strategy Core (\texttt{strat\_decide}):] This module represents the architectural innovation of this thesis. Replacing traditional static threshold logic, the RL Core executes a neural network inference pass for every BBO update. It synthesizes market features (such as spread and imbalance) and computes a trading decision using DSP-accelerated matrix operations. This allows the system to adapt its behavior dynamically to volatility, a capability previously limited to high-latency software systems.
+\end{description}
 
-    \item[RL Strategy Core (\texttt{strat\_decide})]
-    \textit{Responsibility:} The decision-making brain. It replaces static threshold logic with a neural network inference engine. \\
-    \textit{Logic:} It computes features (Spread, Imbalance) and uses DSP slices to evaluate a policy function, outputting a trading signal based on learned weights.
+\subsection{Egress and Execution}
+Once a trading decision is reached, it must be translated into a valid network packet for the exchange.
+\begin{description}
+    \item[OUCH Encoder (\texttt{order\_encode}):] This component acts as the protocol bridge for execution. Upon receiving a \texttt{BUY} or \texttt{SELL} signal from the RL Core, it formats a binary order message adhering to the NASDAQ OUCH 5.0 specification. The encoder populates the necessary fields—including the Client Order ID, Price, and Shares—in Little Endian format, packing them into a dense 40-byte packet structure.
 
-    \item[OUCH Encoder (\texttt{order\_encode})]
-    \textit{Responsibility:} Formats the internal BUY/SELL signal into a valid NASDAQ OUCH 5.0 binary message. \\
-    \textit{Logic:} A state machine constructs a multi-word packet with the required headers, Client Order ID, Price, and Quantity fields, strictly adhering to the Little Endian protocol specification.
-
-    \item[TX Bridge (\texttt{tx\_bridge})]
-    \textit{Responsibility:} Adapts the encoder's output to the MAC layer's timing requirements, ensuring valid AXI-Stream handshaking before the packet is placed on the wire.
+    \item[TX Bridge (\texttt{tx\_bridge}):] The final stage of the pipeline adapts the bursty output of the encoder to the strict timing requirements of the 10GbE MAC. It handles AXI-Stream handshaking signals (\texttt{tready}, \texttt{tvalid}) and inserts the necessary inter-frame gaps, ensuring physical layer compliance before the packet is serialized onto the fiber optic medium.
 \end{description}
 
 \section{Software Support Architecture}
-While the critical path is in FPGA, the system relies on a robust C++ software architecture for simulation and control (detailed in Chapter 5).
+
+While the critical path executes entirely within the FPGA fabric, a robust software ecosystem is essential for simulation, model training, and system monitoring.
 \begin{itemize}
-    \item \textbf{Async Logger:} A non-blocking logging infrastructure ensures that debugging and compliance logs do not back-pressure the trading threads.
-    \item \textbf{Matching Engine Simulator:} A software-based exchange simulator allows for the verification of the OUCH encoder and strategy logic before hardware deployment.
+    \item \textbf{Asynchronous Logging Infrastructure:} To maintain observability without compromising performance, the software layer utilizes a lock-free, ring-buffer-based logging mechanism. This ensures that diagnostic data and compliance logs are offloaded to background threads, preventing I/O blocking on the main control threads.
+    \item \textbf{Matching Engine Simulator:} To validate the efficacy of the RL Core and the correctness of the OUCH encoder prior to hardware deployment, a bit-accurate software simulator of the exchange matching logic is employed. This simulator enforces Price-Time Priority execution, allowing for realistic backtesting of the strategy against historical data.
 \end{itemize}
