docs(thesis): Restructure into 7 chapters, adding Results (Ch6) and Conclusion (Ch7)

--- a/FE900_Thesis/SV_stevensThesis.tex
+++ b/FE900_Thesis/SV_stevensThesis.tex
@@ -396,6 +396,8 @@ back group2/.style={
 \include{chapter3}
 \include{chapter4}
 \include{chapter5}
+\include{chapter6}
+\include{chapter7}
 
 \include{Appendix}
 % The bibliography is below.  The formatting for the bibliography is not provided here.  Formatting for references can be in 
