docs(thesis): Update thesis date to January 19, 2026

--- a/FE900_Thesis/titlepg.sty
+++ b/FE900_Thesis/titlepg.sty
@@ -14,7 +14,7 @@
 %\newcommand{\committeenameC}{Bob Johnston}
 %\newcommand{\committeenameD}{Suzanne Smitty}
 \newcommand{\thesisdepartment}{Financial Engineering}
-\newcommand{\thesisdate}{November 2025}
+\newcommand{\thesisdate}{January 19, 2026}
 \newcommand{\thesistype}{thesis}
 \newcommand{\thesisdegree}{MASTER OF SCIENCE - FINANCIAL ENGINEERING}
 \newcommand{\thesissigline}[1]{%
